# epuzzle

./: .clang-format  .clang-format-ignore  .clang-tidy  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.en.md  README.md  README.txt
.github/workflows/: _build_template.yml  cd_release.yml  ci-cd.yml  ci_pr.yml  cleanup.yml
apps/: CMakeLists.txt
apps/epuzzle/: CMakeLists.txt
apps/epuzzle/src/: ProgramOptions.cpp  ProgramOptions.h  main.cpp
apps/epuzzle_cli/: CMakeLists.txt
apps/epuzzle_cli/src/: main.cpp
cmake/: version.h.in
core/: CMakeLists.txt
core/include/epuzzle/: Exceptions.h  ISolver.h  PuzzleData.h  PuzzleDataLoader.h  PuzzleDefinition.h  PuzzleParser.h  PuzzleSolution.h  Solver.h  SolverConfig.h
core/src/: ISolver.cpp  IndexedPuzzleData.cpp  IndexedPuzzleData.h  IndexedSolution.cpp  IndexedSolution.h  IndexedTypes.h  PuzzleData.cpp  PuzzleDataLoader.cpp  PuzzleDefinition.cpp  PuzzleModel.cpp  PuzzleModel.h  PuzzleParser.cpp  PuzzleSolution.cpp  SolutionModel.cpp  SolutionModel.h  Solver.cpp  SolverConfig.cpp  pch.h
core/src/BruteForce/: BruteForceChecker.cpp  BruteForceChecker.h  BruteForceContext.h  BruteForceFactory.cpp  BruteForceFactory.h  BruteForcer.cpp  BruteForcer.h  ICandidateIterator.h  ICandidatesSpace.cpp  ICandidatesSpace.h  IConstraint.cpp  IConstraint.h  ParallelBruteForcer.cpp  ParallelBruteForcer.h  SpaceParallelDistributor.h  Validator.cpp  Validator.h
core/src/Reasoning/: Reasoner.cpp  Reasoner.h
core/src/bruteforce/: BruteForceFactory.cpp  BruteForceFactory.h  BruteForcer.cpp  BruteForcer.h  ConstraintChecker.cpp  ConstraintChecker.h  ICandidateIterator.h  ICandidatesSpace.cpp  ICandidatesSpace.h  IConstraint.cpp  IConstraint.h  ParallelBruteForcer.cpp  ParallelBruteForcer.h  ParallelSolver.cpp  ParallelSolver.h  SearchSpace.cpp  SearchSpace.h  SearchSpaceCursor.h  SequentialSolver.cpp  SequentialSolver.h  SolverContext.h  SpaceParallelDistributor.h  SpaceSplitter.h  Validator.cpp  Validator.h
core/src/deductive/: DeductiveSolver.cpp  DeductiveSolver.h  Reasoner.h
puzzle_examples/: einsteins.toml  einsteins.txt  five_ships.toml  five_ships.txt  four_girls.toml  four_girls.txt  puzzle_gen_by_ds_r1.toml  puzzle_six_houses.txt  six_houses.toml  six_houses.txt
puzzle_samples/: puzzle_einsteins.toml  puzzle_einsteins.txt  puzzle_gen_by_ds_r1.txt  puzzle_six_houses.toml
tests/: CMakeLists.txt
tests/src/: BruteForceTests.cpp  ISolverRealPuzzleTests.cpp  ISolverTests.cpp  PuzzleDataLoaderTests.cpp  PuzzleDataTests.cpp  PuzzleDefinitionTests.cpp  PuzzleParserTests.cpp  SolverRealPuzzleTests.cpp  SolverTests.cpp  TestUtils.cpp  TestUtils.h  pch.h
utils/: CMakeLists.txt
utils/include/utils/: Concurrency.h  Diagnostics.h  Hardware.h  Math.h  Meta.h  Progress.h  Text.h
utils/include/utils/platform/: ConsoleUtils.h
utils/src/platform/: ConsoleUtils.cpp
